--- a/requirements.txt
+++ b/requirements.txt
@@ -33,4 +33,8 @@ flake8==7.0.0
 # Phase 2 - Caching and Performance
 redis==5.0.1
 numpy==1.26.3
-scikit-learn==1.4.0
+scikit-learn==1.4.0  # For clustering in vector search
+
+# Phase 3 - Media Generation
+Pillow==10.2.0  # Image processing
+google-cloud-vision==3.7.0  # Vision API (optional for image analysis)
