--- a/requirements.txt
+++ b/requirements.txt
@@ -23,18 +23,21 @@ redis==5.0.1
 numpy==1.26.3
 scikit-learn==1.4.0  # For clustering in vector search
 
+# Phase 3 - Media Generation
+Pillow==10.2.0  # Image processing
+google-cloud-vision==3.7.0  # Vision API (optional for image analysis)
+
+# Phase 4 - Publishing & Analytics
+requests==2.31.0  # HTTP requests for platform APIs
+requests-oauthlib==1.3.1  # OAuth for social media APIs
+python-wordpress-xmlrpc==2.3  # WordPress API
+tweepy==4.14.0  # Twitter/X API
+PyJWT==2.8.0  # JWT tokens for authentication
+bcrypt==4.1.2  # Password hashing
+
 # Development
 pytest==7.4.3
 pytest-asyncio==0.23.3
 pytest-cov==4.1.0
 black==23.12.1
 flake8==7.0.0
-
-# Phase 2 - Caching and Performance
-redis==5.0.1
-numpy==1.26.3
-scikit-learn==1.4.0  # For clustering in vector search
-
-# Phase 3 - Media Generation
-Pillow==10.2.0  # Image processing
-google-cloud-vision==3.7.0  # Vision API (optional for image analysis)
